
2.8 beta
    - Improved error handling when importing in specific format.
    - Prevented crash when calling invalid import format on startup.
    - Improved duplicate detection.
    - Added markers \filename and \filepath for ".begin.layout" and ".end.layout" files
      in order to output the name or full path of the bib file of the exported database.
    - Fixed possible array index exception in LastPage formatter.
    - Improved author/editor normalization in entry editor.
    - Added metadata extraction from text when PDFs are dragged into JabRef.
    - The filename pattern for renaming a file when dropping a PDF can now be
      configured at "Options"/"Preferences"/"Import"/"File name format pattern".
    - The defaults of the ImportDialog shown when PDFs are dragged into JabRef
      can now be configured at "Options"/"Preferences"/"Import". It is possible to
      override showing the ImportDialog.
    - An entry can be sent by a right click on an entry and select "Send as Email"
      (patch 3306271).
    - Added option to "copy BibTeX key and title" (patch 3370471).
    - The command for pushing to emacs can be configured now. New command for Emacs 23.
      New default for Windows: emacsclient.
    - Added export support for DIN1505 style (based on patch 1874662).
    - Added support for PostgreSQL import/export (patch 3368760 by Fred Stevens).
    - Added formatter "JournalAbbreviator" (patch 3013311 by Meigel).
    - RTFExport: Replaces ligatures `` and '' with RTF control sequences {\ldblquote} and {\rdblquote}.
      (patch 2905383 by Russell Almond).
    - Bugfix for NullPointerException in Biblatex mode (patch 3222388 by Matthias Erll).
    - ToggleButton added to GroupSelector to ease adding/removing references to/from groups
      (based on patch 3313564 updated by Andreas Schlicker).
    - Export filter "tablerefsandbib" updated to contain links to files and notes 
      (patch 2787096 by Thomas Arildsen).