@@ -87,6 +87,15 @@
 			value="Fetch Entries from SLAC SPIRES Database." />
 	</extension>
 
+	<extension id="INSPIREFetcher" plugin-id="net.sf.jabref.core"
+		point-id="EntryFetcher">
+		<parameter id="entryFetcher"
+			value="net.sf.jabref.imports.INSPIREFetcher" />
+		<parameter id="name" value="INSPIRE Entry Fetcher" />
+		<parameter id="description"
+			value="Fetch Entries from SLAC INSPIRE Database." />
+	</extension>
+
 	<extension id="MedlineFetcher" plugin-id="net.sf.jabref.core"
 		point-id="EntryFetcher">
 		<parameter id="entryFetcher"
