@@ -129,6 +129,7 @@ Connect_to_external_SQL_database=Connect_to_external_SQL_database
 Export_to_external_SQL_database=Export_to_external_SQL_database
 Search_JSTOR=Search_JSTOR
 Fetch_SPIRES=Fetch_SPIRES
+Fetch_INSPIRE=Fetch_INSPIRE
 Fetch_CiteSeer_by_ID=Fetch_CiteSeer_by_ID
 Search_Medline=Search_Medline
 Import_from_external_SQL_database=Import_from_external_SQL_database
